# k8s_training

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-single  Makefile  README copy.md  README.md  deployment.yaml  pv-postgres-volume.yaml  pyproject.toml  service.yaml
api/: api_requests.py  main.py  predict.py  rf.pkl  train.py
dashboard/: Dockerfile  database.py  main.py  visualizations.py
data/: train.csv
data/notes/: training_overview.md
k8s-deployment/adminer/: adminer-deploy.yaml  adminer-service.yaml
k8s-deployment/api/: api-deployment.yaml  api-service.yaml  cronjob.yaml
k8s-deployment/postgres/: postgres-configmaps.yaml  postgres-pv.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml
k8s-deployment/scaling/: README.md  deployment.yaml  hpa.yaml
k8s-deployment/scheduler/: predict-scheduler.yaml  scheduler-predict.yaml  scheduler-train.yaml  train-scheduler.yaml
k8s-deployment/streamlit/: streamlit-deployment.yaml  streamlit-service.yaml
k8s_deployment_jasper/api/: configmap.yaml  cronjob copy 2.yaml  cronjob.yaml  deployment.yaml  service.yaml
notes/: .~lock.BDR_Kubernetes_day2.pptx#  BDR_Kubernetes_day2.pptx  training_overview.md
streamlit/: Dockerfile  main.py  visualizations.py
